# logstat

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_log.txt
logstat/: log_entry.py  logstat.py
tests/: test_logentry.py
